--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
       "js" : ["jquery-2.0.0.min.js", "background.js"],
       "css": ["style.css"]
     } ],
+  "options_page": "options.html",
   "manifest_version": 2
 }
